--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,6 +190,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    margin-bottom: 20px;
 }
 
 .universo_saraiva .marcas .box__marcas .marca span {
@@ -225,8 +226,7 @@
 
 .universo_saraiva .marcas .box__marcas .marcas ul {
     padding: 0;
-    column-count: 4;
-    column-gap: 5px;
+    column-count: 2;
     list-style-type: disc;
 }
 
@@ -378,6 +378,12 @@
     text-transform: uppercase;
     font-size: 1.125em;
     font-weight: inherit;
+}
+
+@media only screen and (min-width: 576px) {
+    .universo_saraiva .marcas .box__marcas .marcas ul {
+        column-count: 4;
+    }
 }
 
 @media only screen and (min-width: 767px) {
