Atualizar a posição dos botoes do slick

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -305,6 +305,13 @@
     flex-direction: column-reverse;
 }
 
+.universo_saraiva .listas .slick-arrow{
+    transform: translateY(-50%) translateX(-60px);
+}
+.universo_saraiva .listas .slick-arrow.slick-next{
+    transform: translateY(-50%) translateX(-60px) rotate(180deg);
+}
+
 .universo_saraiva .links {
     column-count: 1;
     column-gap: 13px;
