--- a/v2/assets/css/style.css
+++ b/v2/assets/css/style.css
@@ -1,11 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Work+Sans');
-body {
-    font-family: 'Work Sans', sans-serif;
-}
-
 .universo_saraiva {
     display: flex;
     flex-direction: column;
+    font-family: 'Work Sans', sans-serif;
 }
 
 .section {
@@ -16,6 +12,9 @@ body {
     width: 100%;
     border-bottom: 1px solid #333;
     margin: 0px 0px 20px;
+    text-transform: capitalize;
+    font-size: 1.7857142857142858em;
+    padding-bottom: 5px;
 }
 
 .section__botao .titulo {
@@ -34,15 +33,18 @@ body {
     text-decoration: none;
     color: #000;
     border: 1px solid #eff3f6;
+    font-size: 1.1em;
+    text-transform: uppercase;
 }
 
 .section__botao .titulo a:hover {
     box-shadow: 0 0 10px rgba(0, 0, 0, .08);
+    font-weight:bold;
 }
 
 .section__link .titulo a {
     color: #24282b;
-    font-size: 0.875em;
+    font-size: 1.1em;
     font-weight: 400;
     line-height: 1.571;
     text-align: left;
@@ -83,6 +85,9 @@ body {
     margin-top: 25px;
     font-weight: bold;
 }
+.section .box__ver_mais  a.disabled:hover{
+   font-weight:bold;
+}
 
 .section .box__ver_mais a.disabled {
     pointer-events: none;
@@ -94,6 +99,7 @@ body {
     background: -moz-linear-gradient(top, #545353 0%, #ffffff 65%);
     background: -webkit-linear-gradient(top, #545353 0%, #ffffff 65%);
     background: linear-gradient(to bottom, #545353 0%, #ffffff 65%);
+    padding-top: 60px;
 }
 
 .section__topo h2 {
@@ -128,6 +134,7 @@ body {
     align-items: center;
     justify-content: center;
     top: 5px;
+    font-size: 1.1em;
 }
 
 .section__topo .items .item a:before {
@@ -150,7 +157,7 @@ body {
 }
 
 .section__topo .items a.button__editoras {
-    background: #fd7927;
+    background: #ff7825;
 }
 
 .section__topo .items a.button__autores {
@@ -158,15 +165,15 @@ body {
 }
 
 .section__topo .items a.button__influenciadores {
-    background: #f9d002;
+    background: #fad200;
 }
 
 .section__topo .items a.button__listas {
-    background: #01b47c;
+    background: #01b47d;
 }
 
-.section__topo .items a.button__páginas_especiais {
-    background: #976ebd;
+.section__topo .items a.button__pÃ¡ginas_especiais {
+    background: #976ebe;
 }
 
 .section__topo .items a.button__lojas_parceiras {
@@ -174,7 +181,7 @@ body {
 }
 
 .section__topo .items a.button__categorias_e_departamentos {
-    background: #1a6fff;
+    background: #1d6dff;
 }
 
 .section__topo .assuntos .assunto {
@@ -217,14 +224,14 @@ body {
 }
 
 .section__influenciadores h2 {
-    border-bottom: 1px solid #f9d002;
+    border-bottom: 1px solid #fad200;
 }
 
 .section__listas h2 {
     border-bottom: 1px solid #01b47c;
 }
 
-.section__páginas_especiais h2 {
+.section__pÃ¡ginas_especiais h2 {
     border-bottom: 1px solid #976ebd;
 }
 
@@ -243,27 +250,31 @@ body {
 .categories, .letters {
     margin-bottom: 21px;
     padding-left: 18px;
+    font-size:1.4em
 }
 
 .categories a, .letters a {
     font-size: .875em;
     text-decoration: none;
     color: #000;
-    border: 3px solid transparent;
+    border: 2px solid transparent;
     border-radius: 25px;
     transition: .3s padding;
     line-height: 30px;
     border-width: 0px;
+    
 }
 
 .letters a {
     text-transform: capitalize;
+    border: 2px solid transparent;
+    padding:0 15pz;
 }
 .categories a.active, .letters a.active {
-    border: 3px solid currentColor;
+    border: 2px solid currentColor;
     color: #1e6dfd;
     font-weight: bold;
-    padding: 0 22px;
+    padding: 0 15px;
 }
 
 .categories a:hover, .letters a:hover {
@@ -278,7 +289,7 @@ body {
 
 .categories-autores a.active, .categories-autores a:focus {
     border-radius: 25px;
-    border: 3px solid #ff505a;
+    border: 2px solid #ff505a;
     text-decoration: none;
     font-weight: bold;
     color: #ff505a;
@@ -286,7 +297,7 @@ body {
 
 .categories-livros a.active, .categories-livros a:focus {
     border-radius: 25px;
-    border: 3px solid #01b47c;
+    border: 2px solid #01b47c;
     text-decoration: none;
     font-weight: bold;
     color: #01b47c;
@@ -299,7 +310,7 @@ body {
 
 .categories-paginas a.active, .categories-paginas a:focus {
     border-radius: 25px;
-    border: 3px solid #976ebd;
+    border: 2px solid #976ebd;
     text-decoration: none;
     font-weight: bold;
     color: #976ebd;
@@ -307,7 +318,7 @@ body {
 
 .categories-parceiras a.active, .categories-parceiras a:focus {
     border-radius: 25px;
-    border: 3px solid #019ba3;
+    border: 2px solid #019ba3;
     text-decoration: none;
     font-weight: bold;
     color: #019ba3;
