Atualição do Arquivo css v2.23

--- a/v2/assets/css/style.css
+++ b/v2/assets/css/style.css
@@ -208,7 +208,12 @@
 
 .section__topo .assuntos .assunto a:hover {
     transform: scale(1.1);
-    font-weight: bold;
+
+}
+
+.section__topo .assuntos .assunto a:hover p{
+    font-weight: 700;
+
 }
 
 .section__topo .assuntos .assunto div>p {
