Atualição do Arquivo css v2.24

--- a/v2/assets/css/style.css
+++ b/v2/assets/css/style.css
@@ -54,6 +54,7 @@
     max-width: 100%;
     display: block;
     text-decoration: none;
+    padding: 0 0 4px 0;
 }
 .section__link .titulo a:hover {
     font-weight: bold;
